--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mdx-js/react": "^2.3.0",
+    "@prisma/client": "^5.14.0",
     "@react-hook/resize-observer": "^1.2.6",
     "@tanstack/react-query": "^5.17.15",
     "@types/node": "18.15.11",
@@ -33,6 +34,7 @@
     "next": "13.3.0",
     "next-sitemap": "^4.0.9",
     "nextjs-google-analytics": "^2.3.3",
+    "prisma": "^5.14.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
