--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_CLIENT_ID="0xD6C45d58488E2323C585737b673DA18D780153F9"
-
 DATABASE_URL="postgresql://postgres:123456@localhost:5432/hub?schema=public"
+GOOGLE_CLIENT_ID="543099861661-1qr8gbcdpusmg6vgtk7oajuqu3otp3gc.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
+NEXTAUTH_URL="http://localhost:3000"
