--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gen-search-index": "node --loader @swc-node/register/esm search/generateSearchIndexes.ts"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.1.0",
     "@chakra-ui/next-js": "^2.1.2",
     "@chakra-ui/react": "^2.5.5",
     "@emotion/react": "^11.10.6",
@@ -31,7 +32,8 @@
     "jsonp": "^0.2.1",
     "lodash-es": "^4.17.21",
     "lunr": "^2.3.9",
-    "next": "13.3.0",
+    "next": "^14.2.3",
+    "next-auth": "^4.24.7",
     "next-sitemap": "^4.0.9",
     "nextjs-google-analytics": "^2.3.3",
     "prisma": "^5.14.0",
