--- a/package.json
+++ b/package.json
@@ -60,11 +60,14 @@
     "@types/lunr": "^2.3.7",
     "@types/remove-markdown": "^0.3.4",
     "@types/ua-parser-js": "^0.7.36",
+    "autoprefixer": "^10.4.19",
     "gray-matter": "^4.0.3",
     "husky": ">=6",
     "lint-staged": ">=10",
     "next-mdx-remote": "^4.4.1",
-    "prettier": "^2.8.7"
+    "postcss": "^8.4.38",
+    "prettier": "^2.8.7",
+    "tailwindcss": "^3.4.3"
   },
   "lint-staged": {
     "*.{js,css,md}": "prettier --write"
