--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
+    "chart.js": "^4.4.3",
     "date-fns": "^2.29.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
@@ -38,6 +39,7 @@
     "nextjs-google-analytics": "^2.3.3",
     "prisma": "^5.14.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-intl": "^6.4.0",
