--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",  
+    "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
@@ -55,7 +55,6 @@
     "remark-math": "^5.1.1",
     "strip-markdown": "^6.0.0",
     "thirdweb": "^5.19.1",
-    "typescript": "5.0.4",
     "ua-parser-js": "^1.0.35",
     "usehooks-ts": "^2.9.1"
   },
@@ -75,7 +74,8 @@
     "next-mdx-remote": "^4.4.1",
     "postcss": "^8.4.38",
     "prettier": "^2.8.7",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.5.3"
   },
   "lint-staged": {
     "*.{js,css,md}": "prettier --write"
