--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lunr": "^2.3.9",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
+    "next-connect": "^1.0.0",
     "next-sitemap": "^4.0.9",
     "nextjs-google-analytics": "^2.3.3",
     "prisma": "^5.14.0",
