--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
+    "@types/react-select": "^5.0.0",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.3",
     "cookie-parser": "^1.4.6",
@@ -49,6 +50,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-intl": "^6.4.0",
+    "react-select": "^5.8.0",
     "rehype-highlight": "^6.0.0",
     "rehype-katex": "^6.0.2",
     "remark": "^15.0.1",
